tests/ui/empty_enum.stderr
error: all variants must be a unit variant
 --> tests/ui/empty_enum.rs:6:10
  |
6 | #[derive(SerializeLabeledStringEnum, DeserializeLabeledStringEnum)]
  |          ^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `SerializeLabeledStringEnum` (in Nightly builds, run with -Z macro-backtrace for more info)

error: all variants must be a unit variant
 --> tests/ui/empty_enum.rs:6:38
  |
6 | #[derive(SerializeLabeledStringEnum, DeserializeLabeledStringEnum)]
  |                                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `DeserializeLabeledStringEnum` (in Nightly builds, run with -Z macro-backtrace for more info)
